boxes with lines

--- a/css/link.css
+++ b/css/link.css
@@ -32,5 +32,16 @@
     text-decoration: none;
     color: #ff9911;
   }
+
+  .button {
+    padding: 1px;
+    background: #ffcc99; 
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    border-style: outset;
+    border-color: #d7b9c9; 
+    font-weight: bold;
+    text-align: center;
+  }
         			
 /* ===[ end ]=== */
