line selection and horizontal menu

--- a/css/layout.css
+++ b/css/layout.css
@@ -7,23 +7,22 @@
   Author:                  Dzenan Ridjanovic
   Influenced By:           http://www.simplebits.com/
   Created:                 2006-09-03
-  Updated:                 2011-12-08
+  Updated:                 2011-12-22
 */
 
   header {
-    color: #708491;
-    padding: 6px;
+    color: #663117;
+    padding: 4px;
     background: #d7e9f7;
     text-align: center;
   }
     	
   footer {
-    clear: both;
     font-family: arial, sans-serif;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
-    color: #fffff0;
-    background: #4b91d1;
+    color: #ffffff;
+    background: #663117;
     padding: 10px;
     border-top: 2px solid #999999;
   }
