--- a/css/page.css
+++ b/css/page.css
@@ -7,21 +7,21 @@
   Author:                  Dzenan Ridjanovic
   Influenced By:           http://www.simplebits.com/
   Created:                 2006-09-03
-  Updated:                 2011-12-15
+  Updated:                 2011-12-23
 */
 
   body {
     font-family: verdana, arial, helvetica, sans-serif;
-    font-size: 14px;
-    background: #d7e9f7;
-    width:900px;
-    margin-left: 100px;
-    margin-right: 100px;
+    font-size: 16px;
+    background: #d9ece2;
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
     padding:10px; 
   }
 
   section {
-    padding: 4px;
+    padding: 5px;
   }
 
   p {
